<resources>
    <string name="app_name">音乐助手</string>
    <string name="action_settings">设置</string>
    <string name="main_title">首页</string>
    <string name="check_update">AutoCheck</string>
    <string name="title_activity_setting">设置</string>
    <string name="save_path">SavePath</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="description">欢迎使用此软件，你需要知道的:\n1.由于初衷只是个音乐搜索下载工具，所以本软件不支持后台播放音乐。\n2.右上角菜单栏可以对软件进行设置。\n3.右下角的"+"可以设置搜索的音乐源。\nPS:本软件纯属个人作品，有任何bug可以通过摇一摇反馈给我</string>
    <string name="description_search">1.左滑菜单可以进行下载和观看mv\n2.默认下载音质为最高音质</string>
    <string name="no_music_name">你还没有输入歌曲名字呢</string>
    <string name="start_info">温馨提示</string>
    <string name="i_know">知道了</string>
    <string name="no_music_url">未找到播放链接</string>
    <string name="music_wy">网易云音乐</string>
    <string name="music_qq">QQ音乐</string>
    <string name="music_kg">酷狗音乐</string>
    <string name="music_kw">酷我音乐</string>
    <string name="music_tt">天天动听</string>
    <string name="music_xm">虾米星球</string>
    <string name="music_bd">百度音乐</string>
    <string name="music_dx">爱音乐</string>
    <string name="mv_yinyuetai">音悦台</string>
    <string name="sel_music_type">选择音乐源</string>
    <string name="app_designer">程序设计:qtfreet00</string>
    <string name="ui_designer">Logo设计:Hiapk-天使</string>
    <string name="dialog_message">音乐助手本着开源开发的一款工具类App，请勿将此软件用于任何非法用途，本软件仅供学习交流，使用此软件即代表默认遵守此声明，本人将不对此负任何法律责任！</string>
    <string name="mango">芒果TV</string>

</resources>
