<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout="@layout/preference_item"
    android:title="@string/title_activity_setting">
    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="个性化设置">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/check_update"
            android:layout="@layout/preference_item"
            android:summaryOff="自动开启已关闭(默认)"
            android:summaryOn="目前已开启自动更新"
            android:title="自动检测更新" />
        <EditTextPreference
            android:defaultValue="musicuu"
            android:key="@string/save_path"
            android:layout="@layout/preference_item"
            android:summary="默认保存在SD卡musicuu文件夹下"
            android:title="下载路径" />


    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="帮助">
        <Preference
            android:layout="@layout/preference_item"
            android:title="开源地址">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Qrilee/MusicUU" />
        </Preference>

        <com.qtfreet.musicuu.wiget.DialogPreference
            android:dialogMessage="@string/dialog_message"
            android:dialogTitle="免责声明"
            android:key="DialogPreference"
            android:layout="@layout/preference_item"
            android:negativeButtonText="同意"
            android:positiveButtonText="@null"
            android:title="免责声明" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="那些人">
        <Preference
            android:layout="@layout/preference_item"
            android:title="@string/app_designer" />

        <Preference
            android:layout="@layout/preference_item"
            android:title="@string/ui_designer" />
    </PreferenceCategory>
</PreferenceScreen>